--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,20 +3,25 @@
 {{#if  todos.length}}
 <ul>
 {{#each todos}}
-<li class ="todo">
-    <label>
 
-        {{#if completed}}
-       <input type="checkbox" checked>
+<li class ="todo">
+    
+    <form action="/complete" method="POST">
+    <label>
+      {{#if completed}}
+       <input type="checkbox" checked name="completed">
         <span  class="completed">{{title}}</span>
         {{else}}
-        <input type="checkbox">
+        <input type="checkbox" name="completed">
         <span>{{title}}</span>
         {{/if}}
-       
 
-        <button class="btn btn-small">Save</button>
+        <input type="hidden" value="{{_id}}" name="id">
+       
+        <button class="btn btn-small" type="submit">Save</button>
+
     </label>
+    </form>
 </li>
 
 {{/each }}
